feat: add docker support to run the app

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,28 @@
-# Application
-NODE_ENV=development
+# Environment variables for Docker setup
+# Copy this file to .env and fill in your actual values
+
+# Application Configuration
+NODE_ENV=production
 PORT=3000
 
-# Supabase
-NEXT_PUBLIC_SUPABASE_URL=
-NEXT_PUBLIC_SUPABASE_ANON_KEY=
+# Supabase Configuration
+NEXT_PUBLIC_SUPABASE_URL=http://localhost:9999
+NEXT_PUBLIC_SUPABASE_ANON_KEY=your-supabase-anon-key
+
+# Database Configuration
+POSTGRES_DB=creator_hub
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=postgres
+
+# JWT Configuration
+JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
+
+# SMTP Configuration (for email)
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_USER=your-email@gmail.com
+SMTP_PASS=your-app-password
+SMTP_ADMIN_EMAIL=admin@yourdomain.com
+
+# Optional: Set to true to disable Next.js telemetry
+# NEXT_TELEMETRY_DISABLED=1
