feat: add new components and pages for n8n community site
- Add hero section with animated gradient and sparkle text
- Create about section explaining n8n community
- Implement featured workflows and creators components
- Add new pages for creators and workflows
- Update header navigation and global styles
- Remove console.error from talent directory
- Extend gitignore with common patterns

--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,40 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# Logs
+logs
+*.log
+dev-debug.log
+# Dependency directories
+node_modules/
+# Environment variables
+.env
+# Editor directories and files
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+# OS specific
+.DS_Store
+
+# Task files
+# tasks.json
+# tasks/
+
+# Taskmaster and related directories
+.taskmaster/
+.roo/
+.windsurf/
+.clinerules/
+.context/
+.cursor/
+.trae/
+AGENTS.md
+CLAUDE.md
+.roomodes
+# GitHub specific directory
+.github/
