update package manager & delete pnpm

--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -7,10 +7,10 @@ RUN apk add --no-cache libc6-compat git
 WORKDIR /app
 
 # Copy package files
-COPY package.json pnpm-lock.yaml* ./
+COPY package.json package-lock.json* ./
 
 # Install dependencies
-RUN corepack enable pnpm && pnpm install
+RUN npm ci
 
 # Copy source code
 COPY . .
@@ -23,4 +23,4 @@ ENV NODE_ENV=development
 ENV NEXT_TELEMETRY_DISABLED=1
 
 # Start development server
-CMD ["pnpm", "dev"]
+CMD ["npm", "run", "dev"]
