--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "react-icons": "^5.5.0",
     "react-image-crop": "^11.0.10",
     "react-markdown": "^10.1.0",
+    "react-multi-carousel": "^2.8.6",
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.0",
     "rehype-raw": "^7.0.0",
